# thrax

./: .gitignore  CMakeLists.txt  GridSearchAndResultProcessing.ipynb  README.md
config/: config-complex.json  config-distmult-pretrained.json  config-distmult.json  config-ensemble.json  config-rescal.json  config-transe.json  config.json
include/thrax/evaluation/: Evaluation.h
include/thrax/initializer/: Initializer.h  InitializerFactory.h  PreTrainedInitializer.h  RandomNormalInitializer.h  RandomUniformInitializer.h  ScalarInitializer.h  XavierInitializer.h
include/thrax/lossFunction/: LogisticLossFunction.h  LossFunction.h  LossFunctionFactory.h  PairwiseLossFunction.h  SoftmaxLossFunction.h
include/thrax/model/: AbstractModel.h  BaseEnsembleModel.h  BaseModel.h  ComplEx.h  DISTMULT.h  EmbeddingParameterSet.h  ModelFactory.h  RESCAL.h  TransE.h  TrivialEnsemble.h
include/thrax/optimizer/: Optimizer.h
include/thrax/parameterUpdater/: AdaDeltaParameterUpdater.h  AdaGradParameterUpdater.h  ParameterUpdater.h  ParameterUpdaterFactory.h  RMSPropParameterUpdater.h  SGDParameterUpdater.h
include/thrax/sampler/: CorruptionSampler.h  LCWASampler.h  Sampler.h  SamplerFactory.h
include/thrax/struct/: Data.h  DataContainer.h  Gradient.h  Triple.h
include/thrax/util/: FileUtil.h  GradientChecker.h  MathUtil.h  RandomUtil.h  Typedefs.h
src/: main.cpp
